2013-04-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkman.texi: Cleanup in MPFR and API chapters.
	Also minor cleanup in design decisions. Add vim modeline.
	* api-figure2.fig: Minor fix.
	* api-figure2.eps, api-figure2.pdf, api-figure2.png: Regenerated.

2013-04-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1: Finish cleanup pass.
	* awkcard.in: Document that getline sets RT.
	* gawkman.texi: Ditto.

2013-04-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1: Start cleanup pass.
	* awkcard.in: Minor addition.
	* gawkman.texi: Minor fixes.

	* gawk.1, gawkman.texi: Document PROCINFO entries for API
	major and minor versions.

2013-04-21         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkman.texi: Update all the menus. Fix spelling errors. Remove
	some unneeded fakenodes.

2013-04-20         Arnold D. Robbins     <arnold@skeeve.com>

	* awkcard.in: Clean up and bring up to date.

2013-04-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (gawk.ps, gawkinet.ps): Set TEXINPUTS to point
	at $(srcdir) to be able to include various figures if doing a
	build not in the source directory.

2013-04-16         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkman.texi: New file. This is now the real source for the
	manual and gawk.texi is generated from it.
	* sidebar.awk: New file to DTRT for sidebars in the manual.
	* Makefile.am (EXTRA_DIST): Update.
	(gawk.texi): Add new rule to create / update it if necessary.

2013-04-16         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Pretty much finish cleanup. Move i18n chapter to
	after advanced features chapter.
	* texinfo.tex: Updated to current in texinfo SVN.

2013-04-15         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Continue cleanup.

2013-04-14         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Add link to 'pawk' - awk for python.
	Further cleanups.

2013-04-12         Arnold D. Robbins     <arnold@skeeve.com>
