@@ -1,8 +1,8 @@
-% *****************************************************
-% * DO NOT MODIFY THIS FILE!!!!                       *
-% * It was generated from gawkman.texi by sidebar.awk *
-% * Edit gawkman.texi instead.                        *
-% *****************************************************
+% ****************************************************
+% * DO NOT MODIFY THIS FILE!!!!                      *
+% * It was generated from gawktexi.in by sidebar.awk *
+% * Edit gawktexi.in instead.                        *
+% ****************************************************
 \input texinfo   @c -*-texinfo-*-
 @c vim: filetype=texinfo
 @c %**start of header (This is for running Texinfo on a region.)
