@@ -1,3 +1,8 @@
+2013-04-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Renamed from gawkman.texi.
+	* Makefile.am, sidebar.awk: Adjusted.
+
 2013-04-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkman.texi: Cleanup in MPFR and API chapters.
